@@ -1,83 +1,80 @@
+/* Font Sizes */
 @button-font-size: 0.7rem;
 @data-font-size: 0.85rem;
 @system-font-size: 0.8rem;
+/* Dimensions */
 @alert-max-width: 14rem;
 @display-text-max-width: 20rem;
 @display-text-min-width: 15rem;
 @checkbox-height: 1.25rem;
-@checkbox-knob-width: 20px;
 @checkbox-width: 40px;
-@ds-form-horizontal-max-width: 21rem;
+@checkbox-width-knob: 20px;
+@ds-form-max-width-horizontal: 21rem;
 @error-max-width: 50rem;
 @field-min-width: 15rem;
 @filemanager-min-width: 10rem;
 @form-min-width: 16rem;
-@form-wide-min-width: 40rem;
+@form-min-width-wide: 40rem;
 @label-width: 7rem;
-@label-narrow-width: 5rem;
+@label-width-narrow: 5rem;
 @select-max-width: 12rem;
 @select-option-min-width: 8rem;
 @selector-min-width: 16rem;
 @textarea-max-width: 24rem;
 @textarea-min-width: 15rem;
-#colours() {
-    button-bg: bisque;
-    button-border: gainsboro;
-    button-disabled-bg: gainsboro;
-    button-hover: limegreen;
-    button-lighter-bg: whitesmoke;
-    button-text: black;
-    checkbox-false-bg: firebrick;
-    checkbox-true-bg: seagreen;
-    close: firebrick;
-    disabled: gray;
-    ds-tile-bg: wheat;
-    ds-tile-lighter-bg: whitesmoke;
-    error-bg: lightpink;
-    field-active: bisque;
-    field-border: gainsboro;
-    field-required: red;
-    field-selected-bg: bisque;
-    line: gray;
-    link: seagreen;
-    panel-bg: ivory;
-    panel-shadow: gray;
-    text: black;
-}
+/* Colours */
+@alert-bg: lightpink;
+@button-bg: bisque;
+@button-bg-disabled: gainsboro;
+@button-bg-lighter: whitesmoke;
+@button-border: gainsboro;
+@button-border-hover: limegreen;
+@button-text: seagreen;
+@button-text-hover: black;
+@checkbox-bg-false: firebrick;
+@checkbox-bg-true: seagreen;
+@close-text: firebrick;
+@disabled: gray;
+@ds-bg-tile: bisque;
+@field-focus: bisque;
+@field-required: firebrick;
+@field-bg-selected: bisque;
+@line-border: gray;
+@panel-bg: ivory;
+@panel-bg-trans: hsl(from @panel-bg h s l / 0.25);
+@panel-border-shiny: bisque;
+@panel-shadow: gray;
+@text: black;
 #fonts() {
-    code: ui-monospace, 'Cascadia Code', Menlo, 'DejaVu Sans Mono', monospace;
-    cursive: 'Segoe Print', 'Bradley Hand', Chilanka, casual, cursive;
+    code: 'Cascadia Code', 'Menlo', 'DejaVu Sans Mono', ui-monospace, monospace;
+    cursive: 'Segoe Print', 'Bradley Hand', 'Chilanka', casual, cursive;
     data: 'Roboto Slab', 'DejaVu Serif', 'Sitka Small', serif;
     mono: 'Nimbus Mono PS', 'Courier New', monospace;
-    system: Roboto, system-ui, sans-serif;
+    system: 'Roboto', system-ui, sans-serif;
 }
 #grads() {
-    button-bg: linear-gradient(
-        0deg, #colours[button-bg], #colours[button-lighter-bg]
+    alert-bg-long: linear-gradient(to right, transparent, @alert-bg 80%);
+    button-bg: linear-gradient(0deg, @button-bg, @button-bg-lighter);
+    button-bg-border: radial-gradient(
+        @button-border-hover, transparent, transparent
     );
-    button-border-bg: radial-gradient(
-        #colours[button-hover], transparent, transparent
-    );
-    button-disabled-bg: linear-gradient(
-        0deg, #colours[button-disabled-bg], #colours[button-lighter-bg]
-    );
-    error-fade: linear-gradient(
-        to right, transparent, #colours[error-bg] 80%
+    button-bg-disabled: linear-gradient(
+        0deg, @button-bg-disabled, @button-bg-lighter
     );
 }
 form.classic {
     --label-width: @label-width;
-    background: #colours[panel-bg]; border-radius: 5px;
-    box-shadow: 3px 3px 3px #colours[panel-shadow]; color: #colours[text];
-    display: inline-block; padding-bottom: 0.125rem; position: relative;
+    background: @panel-bg-trans; border-radius: 5px;
+    box-shadow: 3px 3px 3px @panel-shadow; color: @text;
+    display: inline-block; padding: 0 0.5rem 0.5rem; position: relative;
     .alert {
         font-family: #fonts[system]; font-size: @system-font-size;
     }
     .form-wrapper {
-        border-radius: 5px; min-width: @form-min-width;
+        border-radius: 5px; min-width: @form-min-width; margin: 0;
         padding: 0 1rem 0.25rem 1rem; position: relative;
         .form-title {
-            color: #colours[text]; font-family: #fonts[system];
+            color: @text; font-family: #fonts[system];
             margin-left: -2px;
         }
         &:has(.input-field span.field-label) .input-button button {
@@ -85,10 +82,10 @@ form.classic {
         }
     }
     &.narrow, .form-wrapper.narrow {
-        --label-width: @label-narrow-width;
+        --label-width: @label-width-narrow;
     }
     &.wide, .form-wrapper.wide {
-        min-width: @form-wide-min-width;
+        min-width: @form-min-width-wide;
     }
     .form-page > .alert-info, .form-wrapper > .alert-info, & > .alert-info {
         padding-bottom: 0.5rem;
@@ -111,16 +108,25 @@ form.classic {
                 justify-self: end;
             }
         }
+        &.collapse:not(.hide) {
+            &:not(.input-datastructure):has(label.field-label) {
+                grid-template-columns:
+                    min-content min-content auto !important;
+            }
+        }
         &.hide {
             display: none !important; opacity: 0;
         }
         &.inline:not(.hide) {
             display: inline-grid !important; margin-right: 0.5rem;
-            &:not(.input-datastructure):has(label.field-label) {
-                grid-template-columns: min-content min-content auto !important;
-            }
             .input-field {
                 padding-bottom: 0;
+            }
+        }
+        &.shrink:not(.hide) {
+            &:not(.input-datastructure):has(label.field-label) {
+                grid-template-columns:
+                    @label-width-narrow min-content auto !important;
             }
         }
         &:has(span.field-label) {
@@ -156,7 +162,7 @@ form.classic {
         &:has(input[required=required]) .field-label::after,
         &:has(select[required=required]) .field-label::after,
         &:has(textarea[required=required]) .field-label::after {
-            color: #colours[field-required]; content: '*'; min-width: 2ch;
+            color: @field-required; content: '*'; min-width: 2ch;
             padding-left: 0.25rem;
         }
         &:has(.digit-input-wrapper > input:valid) .field-label::after,
@@ -178,20 +184,34 @@ form.classic {
         textarea {
             box-sizing: content-box; min-height: 3lh;
             max-width: @textarea-max-width; min-width: @textarea-min-width;
-            overflow: auto; padding-left: 0.25rem;
+            overflow: auto; padding-left: 0.25rem; padding-top: 0;
         }
         input:focus, textarea:focus {
-            background: #colours[field-active];
+            background: @field-focus;
         }
         input[type=date], input[type=email], input[type=password],
         input[type=text], select.select-multiple option {
             padding: 0 0.25rem;
         }
+        input[type=file] {
+            height: unset;
+            &::file-selector-button {
+                background: #grads[button-bg];
+                border: 2px outset @button-border; border-radius: 50px;
+                color: @button-text; cursor: pointer;
+                font-size: @button-font-size; letter-spacing: 0.1rem;
+                line-height: 0.8rem; padding: 0.366rem 0.75rem;
+                text-transform: uppercase;
+            }
+            &::file-selector-button:hover {
+                color: @button-text-hover;
+            }
+        }
         input[readonly=readonly] {
-            color: #colours[disabled];
+            color: @disabled;
         }
         input[readonly=readonly][type=datetime-local] {
-            background: #colours[panel-bg]; border: 0; color: #colours[text];
+            background: @panel-bg-trans; border: 0; color: @text;
         }
         input[type=submit] {
             font-family: #fonts[system]; font-size: @system-font-size;
@@ -200,7 +220,7 @@ form.classic {
             min-width: @select-option-min-width;
         }
         select.select-multiple option[selected=selected] {
-            background: #colours[field-selected-bg];
+            background: @field-bg-selected;
         }
         .alert {
             border-radius: 5px; display: block; font-size: @system-font-size;
@@ -208,11 +228,11 @@ form.classic {
             padding: 0.25rem 0.5rem;
         }
         .alert-error {
-            background: #colours[error-bg];
-            box-shadow: 3px 3px 3px #colours[panel-shadow];
+            background: @alert-bg;
+            box-shadow: 3px 3px 3px @panel-shadow;
         }
         .alert-info {
-            background: #colours[field-selected-bg];
+            background: @field-bg-selected;
         }
         .field-label {
             font-family: #fonts[system]; font-size: @system-font-size;
@@ -229,17 +249,16 @@ form.classic {
         isolation: isolate;
         button, a.form-button {
             background: #grads[button-bg];
-            border: 2px outset #colours[button-border]; border-radius: 50px;
-            color: #colours[link]; cursor: pointer; display: inline-block;
-            font-family: #fonts[system]; font-size: @button-font-size;
-            letter-spacing: 0.1rem; line-height: 0.8rem; overflow: hidden;
-            padding: 0.366rem 0.75rem; position: relative;
-            text-decoration: none; text-transform: uppercase;
+            border: 2px outset @button-border; border-radius: 50px;
+            color: @button-text; cursor: pointer; display: inline-block;
+            overflow: hidden; padding: 0.25rem 0.75rem;
+            position: relative; text-decoration: none;
             transition: border 0.5s, color 0.5s;
             span, svg {
-                font-size: @button-font-size; letter-spacing: 0.1rem;
-                position: relative; text-decoration: none;
-                text-transform: uppercase; white-space: nowrap; z-index: 3;
+                font-family: #fonts[system]; font-size: @button-font-size;
+                letter-spacing: 0.1rem; position: relative;
+                text-decoration: none; text-transform: uppercase;
+                white-space: nowrap; z-index: 3;
             }
             span.icon-wrapper {
                 display: block;
@@ -249,11 +268,10 @@ form.classic {
             }
         }
         button:hover, a.form-button:hover {
-            border: 2px inset #colours[button-border];
-            color: #colours[button-text];
+            border: 2px inset @button-border; color: @button-text-hover;
         }
         button::before, a.form-button::before {
-            background: #grads[button-border-bg]; content: ''; display: block;
+            background: #grads[button-bg-border]; content: ''; display: block;
             height: 3rem; left: var(--x); opacity: 0; position: absolute;
             top: var(--y); transform: translate(-50%, -50%);
             transition: opacity 0.5s; width: 3rem; z-index: 1;
@@ -266,7 +284,7 @@ form.classic {
             inset: 3px; position: absolute; z-index: 2;
         }
         button[disabled=disabled], button[disabled=disabled]::after {
-            background: #grads[button-disabled-bg];
+            background: #grads[button-bg-disabled];
         }
     }
     .input-boolean {
@@ -280,23 +298,23 @@ form.classic {
         }
         .checkbox-wrapper::after {
             background: #grads[button-bg];
-            border: 2px inset #colours[button-border]; border-radius: 10px;
+            border: 2px inset @button-border; border-radius: 10px;
             content: ''; display: block; position: absolute;
             height: @checkbox-height; left: 0;
-            width: @checkbox-knob-width; z-index: 2;
+            width: @checkbox-width-knob; z-index: 2;
         }
         .checkbox-wrapper:has(input[type=checkbox]:checked)::after {
-            left: @checkbox-knob-width;
+            left: @checkbox-width-knob;
         }
         .checkbox-wrapper::before {
-            background: #colours[checkbox-false-bg];
-            border: 2px inset #colours[button-border]; border-radius: 10px;
+            background: @checkbox-bg-false;
+            border: 2px inset @button-border; border-radius: 10px;
             content: ''; display: block; position: absolute;
             height: @checkbox-height; left: 0; width: @checkbox-width;
             z-index: 1;
         }
         .checkbox-wrapper:has(input[type=checkbox]:checked)::before {
-            background: #colours[checkbox-true-bg];
+            background: @checkbox-bg-true;
         }
         &:has(.label-checkbox) {
             align-items: center !important;
@@ -318,12 +336,11 @@ form.classic {
     .input-display {
         span {
             font-size: @system-font-size; grid-area: input;
-            max-width: @display-text-max-width;
-            padding: 0.125rem 0.35rem; white-space: nowrap;
+            max-width: @display-text-max-width; padding: 3px 0.25rem 1px;
+            white-space: nowrap;
         }
         span.breaking-text {
-            min-width: @display-text-min-width;
-            white-space: break-spaces;
+            min-width: @display-text-min-width; white-space: break-spaces;
         }
         span.code {
             min-width: @display-text-min-width; white-space: unset;
@@ -368,11 +385,11 @@ form.classic {
             outline: 0; text-align: center; width: 2rem;
         }
         .digit:first-child {
-            border-left: 2px inset #colours[button-border];
+            border-left: 2px inset @button-border;
             border-bottom-left-radius: 5px; border-top-left-radius: 5px;
         }
         .digit:last-child {
-            border-right: 2px inset #colours[button-border];
+            border-right: 2px inset @button-border;
             border-bottom-right-radius: 5px; border-top-right-radius: 5px;
         }
     }
@@ -395,7 +412,8 @@ form.classic {
         display: flex; grid-area: input;
     }
     .ds-add-icon {
-        font-family: #fonts[system]; font-size: smaller; font-weight: bold;
+        font-family: #fonts[system]; font-size: @system-font-size;
+        font-weight: bold;
         svg {
             vertical-align: middle;
         }
@@ -408,8 +426,8 @@ form.classic {
             font-weight: normal; padding-top: 0.2rem;
         }
         .ds-row {
-            background: #colours[ds-tile-bg];
-            border-radius: 5px; box-shadow: 3px 3px 3px #colours[panel-shadow];
+            background: @ds-bg-tile;
+            border-radius: 5px; box-shadow: 3px 3px 3px @panel-shadow;
             display: flex; justify-content: space-between; padding: 0.5rem;
         }
         .ds-field {
@@ -419,7 +437,7 @@ form.classic {
                 aspect-ratio: 16 / 9; inline-size: 100%; object-fit: contain;
             }
             input[readonly=readonly] {
-                background: #colours[ds-tile-bg] !important;
+                background: @ds-bg-tile !important;
             }
         }
         .ds-field.hide {
@@ -432,8 +450,8 @@ form.classic {
             flex-direction: column;
         }
         .ds-input.input-text[readonly=readonly] {
-            background: #colours[panel-bg]; border: 0;
-            border-radius: 0; color: #colours[text]; padding: 0;
+            background: @panel-bg-trans; border: 0;
+            border-radius: 0; color: @text; padding: 0;
         }
         .ds-output {
             box-sizing: content-box; font-size: @system-font-size;
@@ -454,17 +472,17 @@ form.classic {
             .ds-remove-icon {
                 align-items: center; background: #grads[button-bg];
                 border-radius: 3px;
-                box-shadow: 2px 2px 2px #colours[panel-shadow];
-                color: #colours[close]; cursor: pointer; display: flex;
-                font-family: #fonts[system]; font-size: smaller;
+                box-shadow: 2px 2px 2px @panel-shadow;
+                color: @close-text; cursor: pointer; display: flex;
+                font-family: #fonts[system]; font-size: @system-font-size;
                 font-weight: bold; padding: 0 0.25rem;
                 img, svg {
                     height: 20px; width: 20px; vertical-align: middle;
                 }
             }
             .ds-remove-icon:hover {
-                box-shadow: inset 0 0 3px #colours[panel-shadow];
-                color: #colours[text];
+                box-shadow: inset 0 0 3px @panel-shadow;
+                color: @text;
             }
         }
         .ds-tag {
@@ -476,8 +494,9 @@ form.classic {
         }
         &.horizontal {
             flex-direction: row; overflow-x: auto;
-            max-width: @ds-form-horizontal-max-width;
-            overscroll-behavior-inline: contain; scroll-behavior: smooth;
+            max-width: @ds-form-max-width-horizontal;
+            overscroll-behavior-inline: contain; padding-right: 0.25rem;
+            scroll-behavior: smooth;
             &.snaps-inline {
                 scroll-snap-type: inline mandatory;
             }
@@ -492,24 +511,45 @@ form.classic {
     .page-list {
         list-style-type: none; margin: 0; padding: 0 0 0.5rem 0;
         li {
-            border-bottom: 1px solid #colours[line];
+            border-bottom: 1px solid @line-border;
             border-top-left-radius: 5px; border-top-right-radius: 5px;
-            color: #colours[disabled]; cursor: pointer; display: inline;
+            color: @disabled; cursor: pointer; display: inline;
             font-family: #fonts[system]; font-size: @system-font-size;
             padding: 0 0.5rem;
         }
         li.selected {
-            border: 1px solid #colours[line];
-            border-bottom: 1px solid transparent; color: #colours[text];
+            border: 1px solid @line-border;
+            border-bottom: 1px solid transparent; color: @text;
         }
     }
-    &.filemanager {
-        padding: 0.5rem;
+    &.shiny {
+        @property --angle {
+            syntax: '<angle>'; initial-value: 0deg; inherits: false;
+        }
+        @keyframes spin {
+            from { --angle: 0deg; }
+            to { --angle: 360deg; }
+        }
+        &::after, &::before {
+            animation: 3s spin linear infinite;
+            background: conic-gradient(
+                from var(--angle), transparent 70%, @panel-border-shiny
+            );
+            border-radius: 5px; content: ''; height: 100%; left: 50%;
+            position: absolute; top: 50%; translate: -50% -50%;
+            width: 100%; z-index: -1;
+        }
+        &::before {
+            filter: blur(1.5rem);
+        }
+        .form-wrapper {
+            background: @panel-bg;
+        }
     }
 }
 .form-error {
-    background: #colours[error-bg]; border: 1px solid #colours[line];
-    border-radius: 5px; box-shadow: 3px 3px 3px #colours[panel-shadow];
+    background: @alert-bg; border: 1px solid @line-border;
+    border-radius: 5px; box-shadow: 3px 3px 3px @panel-shadow;
     max-width: @error-max-width; overflow: hidden; padding: 0.5rem;
     h1, h2, h3 {
         margin: 0.5rem 0 !important;
@@ -526,16 +566,15 @@ form.classic {
                 position: relative;
             }
             p.long::after {
-                background-image: #grads[error-fade];
+                background-image: #grads[alert-bg-long];
                 bottom: 0; content: ''; height: 1rem;
                 position: absolute; right: 0; width: 100%;
             }
         }
     }
     .alert-error, .alert-error-message, .alert-severe .card {
-        border-radius: 5px; background: #colours[error-bg];
-        box-shadow: 3px 3px 3px #colours[panel-shadow];
-        padding: 0.25rem;
+        border-radius: 5px; background: @alert-bg;
+        box-shadow: 3px 3px 3px @panel-shadow; padding: 0.25rem;
     }
     .alert-error, .alert-error-message {
         margin-left: -0.25rem;
@@ -552,4 +591,5 @@ form.classic {
 }
 .selector form.classic:not(.wide) {
     box-shadow: none; margin: 0; min-width: @selector-min-width;
+    padding: 0;
 }
